Refactor drawdetail module, remove public access and move exposed code to api-package.